Fix spacing on bag card and adjust font color

--- a/app/src/theme/variables.css
+++ b/app/src/theme/variables.css
@@ -193,6 +193,8 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-blue-contrast: #162e45;
     --ion-color-blue-shade: #0f2030;
     --ion-color-blue-tint: #eff4fa;
+    /** green **/
+    --ion-color-green: #7fb5a7;
   }
 
   /*
